# vm

./: CMakeLists.txt  Makefile  corewar  corewar.h  ncurses.c  ncurses.c~  ncurses_norm.c  ncurses_norma.c  norm.c  op.h  vm.c  vm.h  vm_comands1.c  vm_commands1.c  vm_commands2.c  vm_commands3.c  vm_commands4.c  vm_commands_help.c  vm_commands_help2.c  vm_game1.c  vm_game2.c  vm_helps.c  vm_init_memory.c  vm_read.c  vm_read2.c  vm_read3.c
corewar.xcodeproj/: project.pbxproj
corewar.xcodeproj/xcuserdata/nsharova.xcuserdatad/xcschemes/: corewar.xcscheme  xcschememanagement.plist
libft/: Makefile  ft_atoi.c  ft_atoi_16.c  ft_atoi_base.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c  ft_lstpush.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memnclr.c  ft_memset.c  ft_printf.c  ft_printf_data_c.c  ft_printf_data_d.c  ft_printf_data_p_u_x_o.c  ft_printf_data_print.c  ft_printf_data_s_wchar_t.c  ft_printf_format_parsing.c  ft_printf_help1.c  ft_printf_itoa.c  ft_printf_itoa_unsigned.c  ft_printf_make_mem.c  (+40 more)
libft/libft.xcodeproj/: project.pbxproj
libft/libft.xcodeproj/xcuserdata/nsharova.xcuserdatad/xcschemes/: libft.xcscheme  xcschememanagement.plist
operations_tests/: 10_ldi_DRR.s  10_ldi_IDR.txt  13_lld_IR_neg.cor  13_lld_IR_neg.s  2_ld_IR_neg.s  2_ld_IR_pos.s  new.txt  patch.txt  test.sh
